create basic structure and styling

--- a/index.html
+++ b/index.html
@@ -6,8 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./script.js" defer></script>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+    <div class="container">
+        <div class="display">42.00</div>
+        <div class="keypad">
+            <div class="row">
+                <button>0</button>
+                <button class="action">AC</button>
+                <button class="action">=</button>
+                <button class="operator">+</button>
+            </div>
+            <div class="row">
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button class="operator">-</button>
+            </div>
+            <div class="row">
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button class="operator">*</button>
+            </div>
+            <div class="row">
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+                <button class="operator" id="test">&divide;</button>
+            </div>
+
+        </div>
+    </div>
     
 </body>
 </html>
