--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
         <div class="display">42.00</div>
         <div class="keypad">
             <div class="row">
-                <button>0</button>
+                <button class="digit">0</button>
                 <button class="action">AC</button>
                 <button class="action">=</button>
                 <button class="operator">+</button>
             </div>
             <div class="row">
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
+                <button class="digit">1</button>
+                <button class="digit">2</button>
+                <button class="digit">3</button>
                 <button class="operator">-</button>
             </div>
             <div class="row">
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
+                <button class="digit">4</button>
+                <button class="digit">5</button>
+                <button class="digit">6</button>
                 <button class="operator">*</button>
             </div>
             <div class="row">
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
+                <button class="digit">7</button>
+                <button class="digit">8</button>
+                <button class="digit">9</button>
                 <button class="operator" id="test">&divide;</button>
             </div>
 
