implement calculator's calculating abilities

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="keypad">
             <div class="row">
                 <button class="digit">0</button>
-                <button class="action">AC</button>
-                <button class="action">=</button>
+                <button class="action" id="AC">AC</button>
+                <button class="action" id="equal">=</button>
                 <button class="operator">+</button>
             </div>
             <div class="row">
